<resources>
    <string name="app_name">Downloader</string>
    <string name="error_json_download">Error in json file downloading</string>
    <string name="image_download">Test Image downloading</string>
    <string name="text_download">Test Text downloading</string>
    <string name="test_photos_mvc">Photos MVC with UI</string>

    <string name="press_to_cancel">Press on Image to Cancel its Downloading</string>
    <string name="downloading">Downloading…</string>
    <string name="cache">Cache: %1$s</string>
    <string name="time">Time: %1$s</string>
    <string name="cache_true">True</string>
    <string name="cache_false">False</string>
    <string name="refresh">Refresh</string>

    <string name="internal_image">Internal Image</string>
    <string name="raw">Raw:&#160;</string>
    <string name="full">Full:&#160;</string>
    <string name="regular">Regular:&#160;</string>
    <string name="small">Small:&#160;</string>
    <string name="thumb">Thumb:&#160;</string>

    <string name="url_not_available">Url not available</string>
    <string name="unknown">Unknown</string>
    <string name="no_available_browser">You have no browsers on your device</string>

</resources>
