<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
              xmlns:app="http://schemas.android.com/apk/res-auto"
              xmlns:tools="http://schemas.android.com/tools"
              android:layout_width="match_parent"
              android:layout_height="match_parent"
              android:orientation="vertical"
              android:paddingBottom="@dimen/android_vertical_margin"
              android:paddingEnd="@dimen/android_horizontal_margin"
              android:paddingLeft="@dimen/android_horizontal_margin"
              android:paddingRight="@dimen/android_horizontal_margin"
              android:paddingStart="@dimen/android_horizontal_margin"
              android:paddingTop="@dimen/android_vertical_margin"
              tools:context=".photodetails.PhotoDetailsActivity">

    <RelativeLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center_vertical"
        android:gravity="end">

        <ImageView
            android:id="@+id/iv_heart"
            android:layout_width="25dp"
            android:layout_height="25dp"
            android:layout_centerVertical="true"
            android:src="@drawable/img_like"/>

        <TextView
            android:id="@+id/tv_likes_number"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerVertical="true"
            android:layout_marginLeft="@dimen/android_horizontal_margin_half"
            android:layout_marginStart="@dimen/android_horizontal_margin_half"
            android:layout_toEndOf="@id/iv_heart"
            android:layout_toRightOf="@id/iv_heart"
            tools:text="12"/>

        <!--<TextView
            android:id="@+id/tv_creation_date"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentEnd="true"
            android:layout_alignParentRight="true"
            android:layout_centerVertical="true"
            android:layout_marginLeft="@dimen/android_horizontal_margin_half"
            android:layout_marginStart="@dimen/android_horizontal_margin_half"
            android:layout_toEndOf="@id/tv_likes_number"
            android:layout_toRightOf="@id/tv_likes_number"
            android:gravity="end"
            tools:text="11-10-2017"/>-->

    </RelativeLayout>


    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/android_vertical_margin">

        <com.makeramen.roundedimageview.RoundedImageView
            android:id="@+id/iv_user_photo"
            android:layout_width="80dp"
            android:layout_height="80dp"
            android:scaleType="centerCrop"
            app:layout_gravity="center_vertical"
            app:riv_border_color="@android:color/white"
            app:riv_corner_radius="5dp"
            tools:src="@drawable/img_placeholder"/>


        <TextView
            android:id="@+id/tv_user_name"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="@dimen/android_horizontal_margin"
            android:layout_marginStart="@dimen/android_horizontal_margin"
            android:layout_toEndOf="@id/iv_user_photo"
            android:layout_toRightOf="@id/iv_user_photo"
            android:textColor="@android:color/white"
            android:textStyle="bold"
            tools:text="Mohammad Sayed"/>

    </RelativeLayout>

    <!--raw;
    full;
    regular;
    small;
    thumb;-->


    <android.support.v7.widget.GridLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/android_vertical_margin_double"
        app:columnCount="3">


        <TextView
            android:text="@string/raw"
            android:textColor="@android:color/white"
            android:textStyle="bold"
            app:layout_columnSpan="1"/>

        <TextView
            android:id="@+id/tv_photo_raw_url"
            android:textColor="@android:color/white"
            android:textStyle="bold"
            app:layout_columnSpan="2"
            tools:text="https://images.unsplash.com/profile-1464495186405-68089dcd96c3?ixlib=rb-0.3.5"/>

        <TextView
            android:paddingTop="@dimen/android_vertical_margin"
            android:text="@string/full"
            android:textColor="@android:color/white"
            android:textStyle="bold"
            app:layout_columnSpan="1"/>

        <TextView
            android:id="@+id/tv_photo_full_url"
            android:paddingTop="@dimen/android_vertical_margin"
            android:textColor="@android:color/white"
            android:textStyle="bold"
            app:layout_columnSpan="2"
            tools:text="https://images.unsplash.com/profile-1464495186405-68089dcd96c3?ixlib=rb-0.3.5"/>

        <TextView
            android:paddingTop="@dimen/android_vertical_margin"
            android:text="@string/regular"
            android:textColor="@android:color/white"
            android:textStyle="bold"
            app:layout_columnSpan="1"/>

        <TextView
            android:id="@+id/tv_photo_regular_url"
            android:paddingTop="@dimen/android_vertical_margin"
            android:textColor="@android:color/white"
            android:textStyle="bold"
            app:layout_columnSpan="2"
            tools:text="https://images.unsplash.com/profile-1464495186405-68089dcd96c3?ixlib=rb-0.3.5"/>

        <TextView
            android:paddingTop="@dimen/android_vertical_margin"
            android:text="@string/small"
            android:textColor="@android:color/white"
            android:textStyle="bold"
            app:layout_columnSpan="1"/>

        <TextView
            android:id="@+id/tv_photo_small_url"
            android:paddingTop="@dimen/android_vertical_margin"
            android:textColor="@android:color/white"
            android:textStyle="bold"
            app:layout_columnSpan="2"
            tools:text="https://images.unsplash.com/profile-1464495186405-68089dcd96c3?ixlib=rb-0.3.5"/>

        <TextView
            android:paddingTop="@dimen/android_vertical_margin"
            android:text="@string/thumb"
            android:textColor="@android:color/white"
            android:textStyle="bold"
            app:layout_columnSpan="1"/>

        <TextView
            android:id="@+id/tv_photo_thumb_url"
            android:paddingTop="@dimen/android_vertical_margin"
            android:textColor="@android:color/white"
            android:textStyle="bold"
            app:layout_columnSpan="2"
            tools:text="https://images.unsplash.com/profile-1464495186405-68089dcd96c3?ixlib=rb-0.3.5"/>

    </android.support.v7.widget.GridLayout>


    <ProgressBar
        android:id="@+id/pb_loading"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:visibility="gone"
        tools:visibility="visible"/>

</LinearLayout>
